fix sign in button on homepage

--- a/client/src/components/homepage/HomePage.css
+++ b/client/src/components/homepage/HomePage.css
@@ -55,7 +55,7 @@ body {
   opacity: .5;
   border-radius:5px;
   text-align: center;
-  margin-top: -15%;
+  /* margin-top: -15%; */
   color: white;
 }
 
